--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "program-template",
+  "name": "@moose23967/program-template",
   "module": "src/main.ts",
   "type": "module",
   "devDependencies": {
